--- a/.github/workflows/sync-image-example.yml
+++ b/.github/workflows/sync-image-example.yml
@@ -36,4 +36,4 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         # 使用 skopeo 工具将镜像同步到阿里云个人仓库中，使用时请自行源和目标修改仓库名称和镜像名称
-         skopeo copy docker://docker.io/userxy2015/ngnix:latest docker://registry.cn-guangzhou.aliyuncs.com/gorgor1065/ngnix:latest
+         skopeo copy docker://docker.io/pytorch/pytorch:2.5.1-cuda12.4-cudnn9-devel docker://crpi-0afugo7wodjxd8dj.cn-hangzhou.personal.cr.aliyuncs.com/lzxlzxlzx/pytorch251_cuda124
